<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- main -->
    <string name="settinglist">DeviceList</string>
    
    <!-- listview -->
    <string name="setting">Setting</string>
    
    <!-- m30_list_item_detail -->
    <string name="led0">LED0:</string>
    <string name="led1">LED1:</string>
    <string name="led2">LED2:</string>
    <string name="led0_on">ON</string>
    <string name="led1_on">ON</string>
    <string name="led2_on">ON</string>
    <string name="led0_off">OFF</string>
    <string name="led1_off">OFF</string>
    <string name="led2_off">OFF</string>
    <string name="ledcontrol">LED_control</string>
    
    <!-- smartconnection -->
    <string name="onekeysetting">SmartConnection</string>
    <string name="stop_button">Stop</string>
    
    <!-- edit_m30_paramter -->
    <string name="wangluoxieyi">NetworkProtocol：</string>
    <string name="remoteip">Remoteip：</string>
    <string name="remoteport">Remoteport：</string>
    <string name="localport">Localport：</string>
    <string name="jiaoyanwei">Parity：</string>
    <string name="tingzhiwei">Stop：</string>
    <string name="botelv">Band：</string>
    <string name="shujuwei">Data：</string>
    <string name="tijiao">OK</string>
    <string name="paramtersetting">Setting</string>
    <string name="tcpserver">TCP Server</string>
    <string name="tcpclient">TCP Client</string>
    <string name="udpserver">UDP Server</string>
    <string name="udpclient">UDP Client</string>
    <string name="check">Check</string>
    <string name="stasmartc">STA Smart C</string>
    <string name="stamanual">STA Manual</string>
    <string name="wirelessap">Wireless AP Mode</string>
    <string name="wangluomoshi">NET Mode</string>
    
    <string name="hello">Hello World, Test!</string>
    <string name="app_name">HLK-M30_v2</string>
    <!--<string name="app_name">WIFICRL</string>-->
    
    <string name="city">城市名：</string>
    <string name="code">市区号：</string>
    
    <string name="add">增加</string>
    <string name="delete">删除</string>
    
    <string name="modify">修改</string>
    <string name="query">查询</string>
    <string name="global_str_back">返回</string>
    <string name="global_str_edit">编辑</string>
    
    <string name ="popup_chose_yes">确定</string>
    
    
     <string name="app_name_ver">HLK-M30_V1.2</string>
	<string name="add_device_parmter">设备参数</string>
	<string name="ssid_view">Ssid</string>
    <string name="password_view">Password</string>
    <string name="ssid_edit">Mediatek</string>
    <string name="password_edit"></string>
    <string name="authmode_text">AuthMode</string>
    <string name="authmode_view"></string>
	<string name="start_button">Start</string>
	
	<string name="temp">:</string>
	<string name="pwd_check">Show Password</string>
	<string name="identify">Identify</string>
	<string name="identify_edit"></string>
	<string name="input_hint">Please input ...</string>
	
	<string name="ipaddrdefault_hint">192.168.0.99</string>
	<string name="port_hint">7681</string>
	<string name="ipaddr_edit">182.148.123.91</string>
	<string name="init_server">Init Server</string>
	<string name="port_edit">7681</string>
	<string name="port_view">Port</string>
	<string name="internet_ipaddr_view">IoT Server </string>
	<string name="friendid_ipaddr_view">Friend ID </string>
	<string name="friendid_edit">00:0c:43:12:34:dd </string>
	<string name="add_friend">Add</string>
	<string name="ctrl_password_view">Ctrl PWD</string>
	<string name="ctrl_password_edit"></string>
	<string name="set_ctrl_password">SET</string>
	<string name="network_type_view">NetType</string>
	
	<string name="query_clientlist">QueryClients</string>
	<string name="device_status">ON</string>	
	<string name="client_offline">OffLine</string>
	<string name="query_gpio">QueryGPIO</string>
	<string name="set_gpio">SetGPIO</string>	
	<string name="gpio_list_name">GPIO List:</string>
	<string name="gpio_get_values_name">Get Values:</string>
	<string name="gpio_set_values_name">Set Values:</string>
	<string name="gpio_list">0 1 2 3 </string>
	<string name="gpio_values">0 0 0 0 </string>
	<string name="uart_tx">Uart Tx </string>
	<string name="uart_rx">Uart Rx </string>
	<string name="ipaddr_name">IP Addr: </string>
	
	
	
	
	
	
	<string name="please_connect_wifi">Please connect wifi</string>
	<string name="config_tool">HLK-M30 Config Tool</string>
	<string name="version">Version：</string>
	<string name="confim">Confirm</string>
	<string name="zhuye">HOME</string>
	<string name="ver_update">Update Ver</string>
	
	<string name="wifi_name">WIFI：</string>
	<string name="jia_mi">Encry</string>
	<string name="wifi_pwd">Password：</string>
	<string name="qiyong_dhcp">Start DHCP</string>
	<string name="bendi_ip">Local IP:</string>
	<string name="ziwang_yanma">Subnet Mask:</string>
	<string name="wang_guan">Gateway:</string>
	<string name="please_select">Please select：</string>
	<string name="beijing">Beijing</string>
    <string name="shanghai">Shanghai</string>
    <string name="tianjin">Tianjin</string>
    <string name="chongqing">ChongQin</string>
</resources>
