<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget0"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffff" >

    <include layout="@layout/title"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip" >

            <TextView
                android:id="@+id/widget37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/led0" >
            </TextView>

            <Button
                android:id="@+id/gpio0_on"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/led0_on" >
            </Button>

            <Button
                android:id="@+id/gpio0_off"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/led0_off" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip" >

            <TextView
                android:id="@+id/widget38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/led1" >
            </TextView>

            <Button
                android:id="@+id/gpio1_on"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/led1_on" >
            </Button>

            <Button
                android:id="@+id/gpio1_off"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/led1_off" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip" >

            <TextView
                android:id="@+id/widget39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/led2" >
            </TextView>

            <Button
                android:id="@+id/gpio2_on"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/led2_on" />

            <Button
                android:id="@+id/gpio2_off"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/led2_off" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>