<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	android:background="#fff"
	>
<!-- 	android:background="@drawable/green"	 -->
	<LinearLayout android:id="@+id/user"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical">	
		
	    <include layout="@layout/title"/>
	    		
		<TableLayout 
			android:layout_width="fill_parent" android:paddingTop="10dip"
			android:layout_height="wrap_content"
			 >
			
			<TableRow android:id="@+id/user_infor"
				android:layout_width="wrap_content" android:layout_height="fill_parent">
				<TextView android:id="@+id/SSIDView" android:text="@string/ssid_view"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:paddingTop="12dip" android:textStyle="bold"
					android:textColor="#0802F3">
				</TextView>
				<TextView android:id="@+id/Temp" android:text="@string/temp"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:paddingTop="12dip" android:textStyle="bold"
					android:gravity="right" android:textColor="#0802F3">
				</TextView>
				<EditText android:id="@+id/SSIDEdit" android:text="@string/ssid_edit"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:singleLine="true" android:layout_weight="1">
				</EditText>

			</TableRow>
			
			<TableRow android:id="@+id/user_infor1"
				android:layout_width="wrap_content" android:layout_height="wrap_content">
				<TextView android:id="@+id/PasswordView" android:text="@string/password_view"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:paddingTop="12dip" android:textStyle="bold"
					android:textColor="#0802F3" >
				</TextView>
				<TextView android:id="@+id/Temp1" android:text="@string/temp"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:paddingTop="12dip" android:textStyle="bold"
					android:gravity="right" android:textColor="#0802F3"
					>
				</TextView>
				<EditText 
					android:id="@+id/PasswordEdit" 
					android:text="@string/password_edit"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="true"
					android:layout_weight="1"
					android:password="true">
				</EditText>
			</TableRow>	

			<TableRow android:id="@+id/user_infor2"
				android:layout_width="wrap_content" android:layout_height="fill_parent"
				android:visibility="gone">
				<TextView android:id="@+id/AuthModeText" android:text="@string/authmode_text"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:paddingTop="12dip" android:textStyle="bold"
					android:textColor="#0802F3">
				</TextView>
				<TextView android:id="@+id/Temp2" android:text="@string/temp"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:paddingTop="12dip" android:textStyle="bold"
					android:gravity="right" android:textColor="#0802F3">
				</TextView>
				<TextView android:id="@+id/AuthModeView" android:text="@string/authmode_view"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:singleLine="true" android:layout_weight="1"
					android:textColor="#FF0203" android:paddingLeft="12dip">
				</TextView>

			</TableRow>
		</TableLayout>
		
	<TableLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			 >	
		<CheckBox 
			android:id="@+id/PwdCheck" 
			android:text="@string/pwd_check"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
		</CheckBox>
		
				
	    <RadioGroup 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:visibility="gone">
	        
	        <RadioButton android:id="@+id/rdBtn1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="V1版"
	            android:checked="true"/>
	        
	        <RadioButton android:id="@+id/rdBtn4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="V4版"
	            android:layout_marginLeft="10dp"/>
	        
	        
	    </RadioGroup>
		
		
		<TableRow android:id="@+id/user_infor3"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
			
			<Button android:id="@+id/StartButton" 
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/start_button"
				android:layout_weight="2">
			</Button>

			<Button android:id="@+id/StopButton" 
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/stop_button"
				android:layout_weight="2">
			</Button>
		</TableRow>
	</TableLayout>
	
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="1,请确保手机已经连接wifi。"/>
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="2,暂不支持连接5G频段WIFI,请连接2.4G频段wifi。"/>
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="3,该软件支持海凌科 M30/35原生模块。SmartConfig配置"/>
	
	
	<ScrollView android:id="@+id/scrollView"
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent">
	    <TextView android:id="@+id/tvLog"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text=""
	        android:textColor="#000"/>
	    
	    
	</ScrollView>
	
</LinearLayout>	

</FrameLayout>
